# C-Matchday

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tailwind.config.js
config/: football_config.json
docs/: api.md
include/: auth.h  football_api.h  server.h
public/: index.html  login.html  register.html
public/css/: styles.css  tailwind.css
public/js/: app.js  index.js  login.js  register.js
public/layouts/: footer.html
scripts/: clean.sh  run.sh
src/: auth.c  football_api.c  main.c  server.c
tests/: test_api  test_api.c  test_auth.c
